--- a/src/index.html
+++ b/src/index.html
@@ -11,12 +11,12 @@
 <body>
     <div>
         <div class="text-center mt-8 lg:col-start-2 col-span-4">
-            <h1 class="mb-4 text-3xl font-extrabold text-gray-900 dark:text-white md:text-5xl lg:text-6xl"><span class="text-transparent bg-clip-text bg-gradient-to-r to-emerald-600 from-sky-400">Maximum Safe Dosage</span> Calculator</h1>
+            <h1 class="mb-4 text-3xl font-extrabold text-gray-900 dark:text-white md:text-5xl"><span class="text-transparent bg-clip-text bg-gradient-to-r to-emerald-600 from-sky-400">Maximum Safe Dosage</span> Calculator for podiatrist</h1>
             <p class="text-lg font-normal text-gray-500 lg:text-xl dark:text-gray-400">You can use this simple calculator to see how much local anestetic can be administered to any patient, by providing some pt informations</p>
           </div>
     </div>
     <div>
-        <div class="w-auto grid-col-1 lg:grid-cols-6 gap-1 ">
+        <div class="w-6 grid-col-1 lg:grid-cols-6 gap-1 ">
             <div class="item-center lg:col-start-2 col-end-3 mt-16">
                 <form class='m-8'>
                     <h1 class="mb-6 text-9xl font-bold text-gray-900 dark:text-gray-300">Patient Details</h1>
@@ -54,9 +54,9 @@
                     </div>
                 </form>
             </div>
-            <div class="w-auto h-96 flex justify-center items-center lg:col-start-3 col-end-5">
+            <!-- <div class="w-auto h-96 flex justify-center items-center lg:col-start-3 col-end-5">
                 <button type="button" class="w-56 h-28 flex justify-center items-center focus:outline-none text-white bg-green-700 hover:bg-green-800 focus:ring-4 focus:ring-green-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800" id="button">Calculate</button>
-            </div>
+            </div> -->
             <div class="w-auto items-center mt-16 lg:col-end-7 lg:col-span-2">
                 <form class='m-8'>
                     <h1 class="mb-6 text-9xl font-bold text-gray-900 dark:text-gray-300">Anaesthetic Details</h1>
@@ -78,11 +78,14 @@
                     </div>
                 </form>
             </div>
-            
-            <div class="flex items-center justify-center lg:col-start-2 col-span-4">
-                <h1 class="mb-4 text-3xl font-extrabold text-gray-900 dark:text-white md:text-5xl lg:text-6xl"><span class="text-transparent bg-clip-text bg-gradient-to-r to-emerald-600 from-sky-400">Results</span></h1>
+            <div class="flex mt-16 justify-center items-center">
+                <button type="button" class="w-56 h-28 flex justify-center items-center focus:outline-none text-white bg-green-700 hover:bg-green-800 focus:ring-4 focus:ring-green-300 font-medium rounded-lg text-sm px-5 py-2.5 dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800" id="button">Calculate</button>
             </div>
-            <div class="text-3xl font-extrabold text-center col-start-2 col-span-4" id="results">
+            
+            <div class="mt-16 flex items-center justify-center">
+                <h1 class="text-3xl font-extrabold text-gray-900 dark:text-white md:text-5xl lg:text-6xl"><span class="text-transparent bg-clip-text bg-gradient-to-r to-emerald-600 from-sky-400">Results</span></h1>
+            </div>
+            <div class="mt-16 text-3xl font-extrabold text-center col-start-2 col-span-4" id="results">
             </div>
         </div>
     </div>
