--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="../dist/output.css" rel="stylesheet">
+    <link href="./dist/output.css" rel="stylesheet">
     <title>Document</title>
 </head>
 
@@ -12,7 +12,7 @@
     <div>
         <div class="text-center mt-8">
             <h1 class="mb-4 text-3xl font-extrabold text-gray-900 dark:text-white md:text-5xl"><span class="text-transparent bg-clip-text bg-gradient-to-r to-emerald-600 from-sky-400">Maximum Safe Dosage</span> Calculator for podiatrist</h1>
-            <p class="my-14 text-lg font-normal text-gray-500 lg:text-xl dark:text-gray-400">You can use this simple calculator to see how much local anestetic can be safely administered to any patient, by providing some informations</p>
+            <p class="my-14 text-lg font-normal text-gray-500 lg:text-xl dark:text-gray-400 ">You can use this simple calculator to see how much local anestetic can be safely administered to any patient. By providing some informations in the form below you can easily see how many mg of local anaesthetic can be injected and the correspondent number of cartrige it would be</p>
         </div>
         <hr class="my-10 w-11/12 border-gray-300 mx-auto dark:border-gray-700 lg:my-16"/>
     </div>
@@ -119,6 +119,6 @@
     
     
 <script src="../node_modules/flowbite/dist/flowbite.min.js"></script>
-<script src="app.js"></script>
+<script src="./src/app.js"></script>
 </body>
 </html>
