--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     </div>       
     
     
-<script src="../node_modules/flowbite/dist/flowbite.min.js"></script>
+<script src="./node_modules/flowbite/dist/flowbite.min.js"></script>
 <script src="./src/app.js"></script>
 </body>
 </html>
