--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 
-<body>
+<body class="m-20 p-10 border-2 border-green-900 rounded-2xl">
     <div>
         <div class="text-center mt-8">
             <h1 class="mb-4 text-3xl font-extrabold text-gray-900 dark:text-white md:text-5xl"><span class="text-transparent bg-clip-text bg-gradient-to-r to-emerald-600 from-sky-400">Maximum Safe Dosage</span> Calculator for podiatrist</h1>
@@ -79,9 +79,9 @@
                     </div>
                 </form>
             </div>
-            <div class="flex mt-16 justify-center items-center lg:mx-auto">
-                <button type="button" class="w-56 h-28 flex justify-center items-center focus:outline-none text-white bg-green-700 hover:bg-green-800 focus:ring-4 focus:ring-green-300 font-medium rounded-lg text-sm px-5 py-2.5 dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800" id="button">Calculate</button>
-            </div>
+        </div>
+        <div class="flex mt-16 justify-center items-center lg:mx-auto">
+            <button type="button" class="w-56 h-28 flex justify-center items-center focus:outline-none text-white bg-green-700 hover:bg-green-800 focus:ring-4 focus:ring-green-300 font-medium rounded-lg text-sm px-5 py-2.5 dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800" id="button">Calculate</button>
         </div>
             
             <div class="mt-16 flex items-center justify-center">
@@ -95,7 +95,7 @@
             <svg aria-hidden="true" class="flex-shrink-0 w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7-4a1 1 0 11-2 0 1 1 0 012 0zM9 9a1 1 0 000 2v3a1 1 0 001 1h1a1 1 0 100-2v-3a1 1 0 00-1-1H9z" clip-rule="evenodd"></path></svg>
             <span class="sr-only">Info</span>
             <div class="ml-3 text-sm font-medium">
-            Keep in mind that if a patient is less than 18 years old the MSD for kg is lower than adults <a href="#" class="font-semibold underline hover:no-underline"></a>.
+            Keep in mind that if a patient is less than 18 years old the MSD for kg is lower than for adults <a href="#" class="font-semibold underline hover:no-underline"></a>.
             </div>
             <button type="button" class="ml-auto -mx-1.5 -my-1.5 bg-red-50 text-red-500 rounded-lg focus:ring-2 focus:ring-red-400 p-1.5 hover:bg-red-200 inline-flex h-8 w-8 dark:bg-gray-800 dark:text-red-400 dark:hover:bg-gray-700" data-dismiss-target="#alert-1" aria-label="Close">
             <span class="sr-only">Close</span>
