--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 
-<body class="m-20 p-10 border-2 border-green-900 rounded-2xl sm:m-4 sm:p-1">
+<body class=" border-2 border-green-900 rounded-2xl sm:m-4 sm:p-1 md:m-20 md:p-10">
     <div>
         <div class="text-center mt-8">
             <h1 class="mb-4 text-3xl font-extrabold text-gray-900 dark:text-white md:text-5xl"><span class="text-transparent bg-clip-text bg-gradient-to-r to-emerald-600 from-sky-400">Maximum Safe Dosage</span> Calculator for podiatrist</h1>
@@ -90,7 +90,7 @@
             <div class="mt-16 text-3xl font-extrabold text-center col-start-2 col-span-4" id="results">
             </div>
     </div>
-    <div class="w-96 containe mx-auto mt-11 sm:w-auto" id="attention">
+    <div class="containe md:mx-auto md:w-96 md:mt-11" id="attention">
         <div id="alert-1" class=" flex p-4 mb-4 text-red-800 rounded-lg bg-red-50 dark:bg-gray-800 dark:text-red-400" role="alert">
             <svg aria-hidden="true" class="flex-shrink-0 w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7-4a1 1 0 11-2 0 1 1 0 012 0zM9 9a1 1 0 000 2v3a1 1 0 001 1h1a1 1 0 100-2v-3a1 1 0 00-1-1H9z" clip-rule="evenodd"></path></svg>
             <span class="sr-only">Info</span>
@@ -103,7 +103,7 @@
             </button>
         </div>
     </div>
-    <div class="w-96 containe mx-auto mt-11 sm:w-auto" id="genderAttention">
+    <div class="w-96 containe mx-auto mt-11" id="genderAttention">
         <div id="alert-2" class=" flex p-4 mb-4 text-red-800 rounded-lg bg-red-50 dark:bg-gray-800 dark:text-red-400" role="alert">
             <svg aria-hidden="true" class="flex-shrink-0 w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7-4a1 1 0 11-2 0 1 1 0 012 0zM9 9a1 1 0 000 2v3a1 1 0 001 1h1a1 1 0 100-2v-3a1 1 0 00-1-1H9z" clip-rule="evenodd"></path></svg>
             <span class="sr-only">Info</span>
